--- a/Ship-Fit/Ship-Fit/en.lproj/MainStoryboard_iPhone.storyboard
+++ b/Ship-Fit/Ship-Fit/en.lproj/MainStoryboard_iPhone.storyboard
@@ -163,9 +163,9 @@
                     </tabBar>
                     <connections>
                         <segue destination="2" kind="relationship" relationship="viewControllers" id="26"/>
+                        <segue destination="VOL-Q0-d6f" kind="relationship" relationship="viewControllers" id="TaP-JG-cie"/>
                         <segue destination="B1o-P1-9bd" kind="relationship" relationship="viewControllers" id="sou-3y-G3O"/>
                         <segue destination="y50-dc-WMZ" kind="relationship" relationship="viewControllers" id="lDM-c0-ZZN"/>
-                        <segue destination="VOL-Q0-d6f" kind="relationship" relationship="viewControllers" id="TaP-JG-cie"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="14" sceneMemberID="firstResponder"/>
@@ -200,14 +200,9 @@
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" title="Articles" id="Jy1-1E-viH">
-                        <barButtonItem key="leftBarButtonItem" title="Item" id="3Qi-q4-ryl">
+                        <barButtonItem key="leftBarButtonItem" title="TEST_Search" id="3Qi-q4-ryl">
                             <connections>
                                 <action selector="btnTest:" destination="hNZ-2d-NiL" id="HMy-5q-8Ui"/>
-                            </connections>
-                        </barButtonItem>
-                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="b0Q-6Q-sU9">
-                            <connections>
-                                <segue destination="1ae-83-3sB" kind="modal" identifier="addArticle" id="vra-Uk-xCJ"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
@@ -215,66 +210,6 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="YZo-LB-rvD" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="885" y="180"/>
-        </scene>
-        <!--Add View Controller-->
-        <scene sceneID="ZlS-BU-sz6">
-            <objects>
-                <viewController id="1ae-83-3sB" customClass="AddViewController" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="Xps-Og-5se">
-                        <rect key="frame" x="0.0" y="20" width="320" height="548"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <subviews>
-                            <navigationBar contentMode="scaleToFill" id="MN1-sp-sRC">
-                                <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
-                                <items>
-                                    <navigationItem title="New Article" id="YCn-L7-pye">
-                                        <barButtonItem key="leftBarButtonItem" title="Cancel" id="24X-Bk-dWY">
-                                            <connections>
-                                                <action selector="cancel:" destination="1ae-83-3sB" id="amy-li-Hxp"/>
-                                            </connections>
-                                        </barButtonItem>
-                                        <barButtonItem key="rightBarButtonItem" title="Save" id="n3U-Bt-ue9">
-                                            <connections>
-                                                <action selector="save:" destination="1ae-83-3sB" id="IoG-NO-iml"/>
-                                            </connections>
-                                        </barButtonItem>
-                                    </navigationItem>
-                                </items>
-                            </navigationBar>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="HXV-K6-SFq">
-                                <rect key="frame" x="20" y="76" width="37" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Main:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="4wz-c2-i6W">
-                                <rect key="frame" x="20" y="126" width="43" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" id="z6Z-tn-2EC">
-                                <rect key="frame" x="90" y="72" width="203" height="30"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </textField>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" id="Gyr-s9-q3Y">
-                                <rect key="frame" x="20" y="155" width="280" height="376"/>
-                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
-                            </textView>
-                        </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
-                    </view>
-                    <connections>
-                        <outlet property="textField" destination="Gyr-s9-q3Y" id="FqF-bc-1jT"/>
-                        <outlet property="titleField" destination="z6Z-tn-2EC" id="u4m-GW-7Fe"/>
-                    </connections>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="3cU-Yu-lZP" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="1292" y="902"/>
         </scene>
         <!--Database Article View Controller-->
         <scene sceneID="3wV-8Z-NAe">
@@ -310,7 +245,7 @@
         <scene sceneID="wCy-KN-EGw">
             <objects>
                 <navigationController title="Database" id="VOL-Q0-d6f" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Item" id="C0W-KC-Bb1"/>
+                    <tabBarItem key="tabBarItem" title="Database" id="C0W-KC-Bb1"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="eM8-5u-K1i">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
@@ -329,6 +264,37 @@
     <resources>
         <image name="first" width="16" height="16"/>
     </resources>
+    <classes>
+        <class className="DatabaseArticleViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/DatabaseArticleViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="txtTitle" candidateClass="UITextField"/>
+                <relationship kind="outlet" name="wvMainText" candidateClass="UIWebView"/>
+            </relationships>
+        </class>
+        <class className="DatabaseMainViewController" superclassName="UITableViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/DatabaseMainViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="btnTest:"/>
+            </relationships>
+        </class>
+        <class className="MapViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/MapViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="toggleLocationOnMap:"/>
+                <relationship kind="action" name="zoomChange:"/>
+                <relationship kind="action" name="zoomToMe:"/>
+                <relationship kind="outlet" name="compDegLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="compDirLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="latLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="longLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="mapView" candidateClass="MKMapView"/>
+                <relationship kind="outlet" name="speedLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="zoomInButton" candidateClass="UIButton"/>
+                <relationship kind="outlet" name="zoomOutButton" candidateClass="UIButton"/>
+            </relationships>
+        </class>
+    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
